# invoice-maker

./: .clangd  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json
src/: data.hpp  database.cpp  database.hpp  main.cpp  main_window.cpp  main_window.hpp  ui.h
src/data/: migrations.cpp
